Fix CC problems, add mutator for AGP/KGP